--- a/character2/css/dwarf.css
+++ b/character2/css/dwarf.css
@@ -595,7 +595,8 @@ body{
     position:absolute;
     top: 970px;
     left: 45px;
-	font-size: 0.7em;
+	font-size: 0.6em;
+    width: 570px;
 }
 
 
